# CNN-Waste-Detector

./: .gitignore  README.md  WasteDetector.ipynb  pyproject.toml
notebooks/: add_empty_images.ipynb  dataset.ipynb  eda.ipynb  model.ipynb  vgg16.ipynb
scripts/: add_empty_images_to_data.py  fine_tune_vgg16.py  record.py  train_model.py
src/cnnwastedetector/: __init__.py  cnn_waste_detector.py  trainer.py
src/cnnwastedetector/utils/: __init__.py  cnn_utils.py  data_processing_utils.py  eda_utils.py
